added about link

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <div id="headNav">
         <a href="#">All Posts</a>
         <a href="#">My Portfolio</a>
-        <a href="#">About Me</a>
+        <a href="about.html">About Me</a>
         <a href="https://github.com/GarrettPi">My GitHub</a>
       </div>
     </div>
