beginning CSS framework

--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
         <a href="https://github.com/GarrettPi">My GitHub</a>
       </div>
     </div>
+    <div class="blog">
+      <p class="date">June 29, 2021</p>
+      <p class="blogPost" >This will be my first blog post</p>
+    </div>
     <footer>
 
     </footer>
