--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </div>
     <div class="blog">
       <p class="date">June 29, 2021</p>
-      <p class="blogPost" >This will be my first blog post</p>
+      <p class="blogPost" >Let me start out by saying thank you to anyone who found their way here.  Before today, I had never attempted to do anything with html or CSS.  I know this website is NOT much to look at right now but as my training progresses, I expect my skills and sense of web dev style will increase.  My Skill Distillery coding bootcamp begins on July 19th.  I encourage any interested parties in visiting again after that as I hope to regularly update and improve this blog and all the connected sites and resources.  Thanks again!</p>
     </div>
     <footer>
 
