--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <div id="headBox">
-      <h1>Welcome to my Coding Blog</h1>
+      <h1>Welcome to Code Trekke</h1>
       <p>This is where I will be documenting my education as I progress through my bootcamp.  I will also be using it to share my thoughts on coding practices as my experience grows.</p>
       <div id="headNav">
         <a href="#">All Posts</a>
