--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
     </div>
     <div class="blog">
       <p class="date">June 29, 2021</p>
-      <p class="blogPost" >Let me start out by saying thank you to anyone who found their way here.  Before today, I had never attempted to do anything with html or CSS.  I know this website is NOT much to look at right now but as my training progresses, I expect my skills and sense of web dev style will increase.  My Skill Distillery coding bootcamp begins on July 19th.  I encourage any interested parties in visiting again after that as I hope to regularly update and improve this blog and all the connected sites and resources.  Thanks again!</p>
+      <p class="blogPost" >Let me start out by saying thank you to anyone who found their way here.  Before today, I had never attempted to do anything with html or CSS.  I know this website is NOT much to look at right now but as my training progresses, I expect my skills and sense of web dev style will increase.  My Skill Distillery coding bootcamp begins on July 19th.  I encourage any interested parties in visiting again after that as I hope to regularly update and improve this blog and all the connected sites and resources.  Thanks again!<a href="post2.html"> Read more...</a></p>
     </div>
     <div class="blog">
       <p class="date">June 26, 2021</p>
-      <p class="blogPost">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>   
+      <p class="blogPost">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.<a href="post1.html"> Read more...</a></p>
     </div>
     <footer>
 
